[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-conductivity"
version = "0.1.0"
description = "Helfand--Einstein ionic conductivity analysis for molecular-dynamics trajectories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.7",
  "MDAnalysis>=2.6",
  "numpy>=1.23",
  "tqdm>=4.64",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
diffusion-conductivity = "diffusion_conductivity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
